# NeuRust

./: .gitignore  CLAUDE.md  Cargo.toml  NeuRust_System_Design.md  PARALLEL_DEV_GUIDE.md  README.md  run-agents.sh
.github/workflows/: ci.yml
config/: neurust.yml
contracts/: mock.rs  shared_types.rs
crates/neurust-core/: Cargo.toml
crates/neurust-core/src/: contracts.rs  lib.rs  mock.rs
crates/neurust-gateway/: Cargo.toml
crates/neurust-gateway/src/: contracts.rs  mock.rs
crates/neurust-intel/: Cargo.toml
crates/neurust-intel/src/: contracts.rs  mock.rs
data/: model_prices.json
src/: main.rs
