[package]
name = "neurust-gateway"
version = "0.1.0"
edition = "2021"
description = "NeuRust HTTP gateway: axum server, routes, middleware"

[dependencies]
neurust-core = { path = "../neurust-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
